# ciri-cli

./: .gitignore  README.md  build.py  make_binary.py  pyproject.toml
.ciri/: settings.json
.github/workflows/: ci.yml  publish.yml
ciri/: __main__.py  _retry_helpers.py  backend.py  copilot.py  serializers.py  utils.py
ciri/middlewares/: __init__.py  inject_names.py  memory.py  skills.py  subagents.py  toolkits.py
ciri/prompts/: __init__.py  copilot.py  plan_and_research.py  skill_builder.py  subagent_builder.py  toolkit_builder.py  trainer_agent.py  web_researcher.py
ciri/skills/mcp-builder/: SKILL.md
ciri/skills/mcp-builder/reference/: mcp_best_practices.md  node_mcp_server.md
ciri/skills/pdf/: reference.md
ciri/skills/skill-creator/: SKILL.md
ciri/skills/skill-creator/scripts/: init_skill.py
ciri/subagents/: __init__.py  skill_builder.py  subagent_builder.py  toolkit_builder.py  trainer_agent.py  web_researcher.py
ciri/toolkit/: __init__.py  human_follow_up_tool.py  script_executor_tool.py
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: cli-reference-advanced.md  cli-reference.md  contributing.md  examples.md  faq.md  getting-started.md  index.md  intro.md  roadmap.md  security.md  skills-guide.md  subagents-guide.md  toolkits-guide.md  use-cases.md
docs-site/docs/architecture/: components-deep.md  components.md  overview.md
docs-site/docs/development/: run-debug.md
docs-site/docs/features/: autocomplete.md
docs-site/docs/internals/: graph-execution.md  self-evolution.md
docs-site/docs/use-cases/: advanced-research.md  index.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js
src/: __init__.py  __main__.py  agent.py  backend.py  controller.py  controllers.py  copilot.py  db.py  serializers.py  tui.py  utils.py
src/middlewares/: __init__.py  artifacts.py  consciousness.py  frontend_tools.py  memory.py  skill_generator.py  skills.py  subagents.py  tookits.py  toolkits.py
src/prompts/: plan_and_research.py
src/skills/mcp-builder/: SKILL.md
src/skills/mcp-builder/reference/: node_mcp_server.md  python_mcp_server.md
src/skills/pdf/: SKILL.md
src/skills/skill-creator/: SKILL.md
src/skills/skill-creator/scripts/: init_skill.py
src/skills/subagent-builder/: SKILL.md
src/subagents/: __init__.py  skill_builder.py  subagent_builder.py  toolkit_builder.py  trainer_agent.py  web_researcher.py
src/toolkit/: __init__.py  browser_use_tool.py  human_follow_up_tool.py  script_executor_tool.py  skill_manager_tools.py  team_runtime.py  web_crawler_tool.py
tests/: test_backend_execution.py  test_memory_middleware.py  test_multi_query_manual.py  test_screenshot_tool.py  test_script_executor.py  test_skill_manager_tools.py  test_skills_middleware.py  test_subagents_middleware.py  test_toolkits.py  test_toolkits_middleware.py  verify_llm_settings.py
