[project]
name = "ciri-copilot"
version = "0.1.0"
description = "Ciri Copilot CLI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer[all]",
    "rich",
    "anyio",
    "httpx",
    "tenacity",
    "orjson",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "openai",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "deepagents",
    "crawl4ai",
    "duckduckgo-search",
    "ddgs",
    "sqlite-vec",
    "sqlalchemy",
    "langchain-unstructured",
    "langchain-mcp-adapters",
    "langgraph-checkpoint-sqlite",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "packaging",
    "platformdirs",
    "importlib-metadata; python_version<'3.13'",
    "black>=26.1.0",
    "langgraph-swarm>=0.1.0",
    "lxml>=5.4.0",
    "playwright>=1.58.0",
    "prompt-toolkit>=3.0.52",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-PyYAML",
    "types-requests",
    "build",
    "twine",
    "pyinstaller",
    "cyclonedx-bom",
    "pip-audit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ciri = "src.__main__:main"
