[project]
name = "ciri-copilot"
version = "0.1.0"
description = "Ciri Copilot CLI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer[all]",
    "rich",
    "anyio",
    "httpx",
    "tenacity",
    "orjson",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "openai",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "deepagents",
    "crawl4ai",
    "duckduckgo-search",
    "ddgs",
    "sqlite-vec",
    "sqlalchemy",
    "langchain-unstructured",
    "langchain-mcp-adapters",
    "langgraph-checkpoint-sqlite",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "packaging",
    "platformdirs",
    "importlib-metadata; python_version<'3.13'",
    "black>=26.1.0",
    "langgraph-swarm>=0.1.0",
    "lxml>=5.4.0",
    "playwright>=1.58.0",
    "prompt-toolkit>=3.0.52",
    "asgiref>=3.11.1",
    "langchain-litellm>=0.5.1",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.1",
    "langchain-cohere>=0.5.0",
    "langchain-together>=0.0.2.post1",
    "langchain-fireworks>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openrouter>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-PyYAML",
    "types-requests",
    "build",
    "twine",
    "pyinstaller",
    "cyclonedx-bom",
    "pip-audit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ciri = "src.__main__:main"
